--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>CloudLink</title>
-  <style>
-    body { width: 300px; padding: 10px; font-family: sans-serif; }
-    h1 { font-size: 16px; }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <h1>CloudLink</h1>
-  <p>Status: Active</p>
+  <div id="app">
+    <!-- Login View -->
+    <div id="login-view" style="display: none;">
+      <h2>CloudLink Login</h2>
+      <form id="login-form">
+        <input type="email" id="email" placeholder="Email" required>
+        <input type="password" id="password" placeholder="Password" required>
+        <button type="submit">Login</button>
+      </form>
+      <p id="error-message" class="error"></p>
+    </div>
+
+    <!-- Logged In View -->
+    <div id="logged-in-view" style="display: none;">
+      <h2>CloudLink</h2>
+      <p>Logged in as: <span id="user-email"></span></p>
+      <button id="logout-btn">Logout</button>
+      <button id="sync-btn">Sync Now</button>
+      <p id="sync-status"></p>
+    </div>
+
+    <!-- Loading View -->
+    <div id="loading-view">
+      <p>Loading...</p>
+    </div>
+  </div>
   <script src="popup.js"></script>
 </body>
+
 </html>
